--- a/src/app/cms/home/home.component.html
+++ b/src/app/cms/home/home.component.html
@@ -26,14 +26,354 @@
       </div>
     </div>
   </div>
+  <div class="what_new">
+    <div class="whatnew_inner">
+      <h2>What’s New</h2>
+      <div class="scroll-bar-wrap">
+        <div class="scroll-box">
+        <ul class="newsTicker">
+          <li><a href="#">Borem ipsum dolor sit amet,</a></li>
+          <li><a href="#">consectetur adipiscing elit. Nunc vulputate libero et velit</a></li>
+          <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+          <li><a href="#">sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</a></li>
+          <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+          <li><a href="#">Borem ipsum dolor sit amet,</a></li>
+          <li><a href="#">consectetur adipiscing elit. Nunc vulputate libero et velit</a></li>
+          <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+          <li><a href="#">sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</a></li>
+          <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+        </ul>
+        </div>
+        <div class="cover-bar"></div>
+      </div>
+      <a href="#">view all</a>
+    </div>
+  </div>
 </div>
 <!-- End Hero -->
 
-
+<!-- announcement start here -->
+<div class="announcement_sec">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="annunc_notice">
+          <div class="ticker_wrap">
+            <div class="ticker_breaking"> <img src="assets/img/announcment.svg" alt="announcement"><span>Important
+                Announcements:</span></div>
+            <div class="ticker_viewport">
+              <ul class="ticker_list" data-ticker="list">
+                <li class="ticker_item" data-ticker="item">
+                  <a href="#">Invitation for Empanelment of Manufactures of Agricultural Drones (Krishi Drone)</a>
+                </li>
+                <li class="ticker_item" data-ticker="item"><a href="#">Invitation for Empanelment of Manufactures of
+                    Agricultural Drone</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- announcement end here -->
 
 <main id="main">
+  <!-- our leader start here -->
+  <section class="leader_bg">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="leader">
+            <h2>Know Your Leader</h2>
+            <div class="our_leader">
+              <div class="card">
+                <div class="leader_box">
+                  <img src="assets/img/yogi.png" alt="yogi">
+                  <div class="leader_detail">
+                    <a href="#">
+                      <h4>{{ 'YOGI_ADITYANATH' | translate }}</h4>
+                      <span>Hon’ble Chief Minister</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="leader_box">
+                  <img src="assets/img/suriya.png" alt="yogi">
+                  <div class="leader_detail">
+                    <a href="#">
+                      <h4>Shri Surya Pratap Shahi</h4>
+                      <span>Hon'ble Agriculture Minister</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="leader_box">
+                  <img src="assets/img/baldev.png" alt="yogi">
+                  <div class="leader_detail">
+                    <a href="#">
+                      <h4>Shri Baldev Singh Aulakh</h4>
+                      <span>Hon'ble State Minister Agriculture</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="leader_box">
+                  <img src="assets/img/devesh.png" alt="yogi">
+                  <div class="leader_detail">
+                    <a href="#">
+                      <h4>Dr. Devesh Chaturvedi</h4>
+                      <span>Add. Chief Secretary, Agriculture</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="leader_box">
+                  <img src="assets/img/vivek.png" alt="yogi">
+                  <div class="leader_detail">
+                    <a href="#">
+                      <h4>Vivek Kumar Singh</h4>
+                      <span>Director of Agriculture</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="circulars">
+            <h2>circulars</h2>
+            <ul>
+              <li><a href="#">Borem ipsum dolor sit amet,</a></li>
+              <li><a href="#">consectetur adipiscing elit. Nunc vulputate libero et velit</a></li>
+              <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+              <li><a href="#">sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</a></li>
+              <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+              <li><a href="#">Borem ipsum dolor sit amet,</a></li>
+              <li><a href="#">consectetur adipiscing elit. Nunc vulputate libero et velit</a></li>
+              <li><a href="#">interdum, ac aliquet odio mattis. Class aptent taciti</a></li>
+              <li><a href="#">sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</a></li>
+            </ul>
+            <a href="#">view all</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- our leader end here -->
+  <!-- dashboard start here -->
+  <section class="dashboard_bg">
+    <div class="gradint">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-8">
+
+            <div class="dashboard_sec">
+              <h2>Dashboard</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-lg-4">
+
+            <div class="card_box">
+              <h5>Direct Benifit Transfer (DBT)</h5>
+              <ul>
+                <li><a href="http://upagriculture.com:81/datareport_seed.aspx" target="_blank">Seed DBT Report</a></li>
+                <li><a href="http://upagriculture.com:81/datareport_yantra.aspx" target="_blank">Krishi Yantra DBT</a>
+                </li>
+                <li><a href="http://upagriculture.com:81/datareport_upkaran.aspx" target="_blank">Krishi Upkaran DBT</a>
+                </li>
+                <li><a href="http://upagriculture.com:81/datareport_rasayan.aspx" target="_blank">Krishi Raksha Rasayan
+                    DBT</a></li>
+              </ul>
+            </div>
+
+          </div>
+          <div class="col-lg-4">
+
+            <div class="card_box">
+              <h5>PM-KISAN</h5>
+              <ul>
+                <li><a href="http://upagriculture.com:81/pmkisan.html" target="_blank">PM-KISAN Reports</a></li>
+              </ul>
+            </div>
+
+          </div>
+          <div class="col-lg-4">
+
+
+          </div>
+          <div class="col-lg-4">
+
+            <div class="card_box">
+              <h5>Online License</h5>
+              <ul>
+                <li><a href="http://upagriculture.com:81/License/#/Dashboard/Seed" target="_blank">Seed Sale License</a>
+                </li>
+                <li><a href="http://upagriculture.com:81/License/#/Dashboard/Pesticides" target="_blank">Pesticide Sale
+                    License</a></li>
+                <li><a href="http://upagriculture.com:81/License/#/Dashboard/Fertilizer" target="_blank">Fertilizer Sale
+                    License</a></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="col-lg-4">
+
+            <div class="card_box">
+              <h5>Uplabdhata</h5>
+              <ul>
+                <li><a href="http://upagriculture.com:81/License/#/FasalBimaUplabtaReport" target="_blank">Fasal Bima
+                    Report</a></li>
+                <li><a href="http://upagriculture.com:81/License/#/PPUplabtaReport" target="_blank">Krishi Raksha
+                    Report</a></li>
+                <li><a href="http://upagriculture.com:81/License/#/FertilizerUplabtaReport" target="_blank">Fertilizer
+                    Report</a></li>
+                <li><a href="http://upagriculture.com:81/License/#/SeedUplabtaReport" target="_blank">Seed Report</a>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+          <div class="col-lg-4">
+
+
+          </div>
+          <div class="col-lg-4">
+
+            <div class="card_box">
+              <h5>Solar Pump</h5>
+              <ul>
+                <li><a href="http://upagriculture.com:81/misreports_solar.aspx" target="_blank">Solar Pump Report</a>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- dashboard end here -->
+  <!-- announcement start here -->
+  <section class="annc_bg">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="announcement">
+            <div class="annc_heading">
+              <h2>Annocements</h2>
+              <a href="#">view all</a>
+            </div>
+            <ul>
+              <li><a href="#">Compilation of Government Orders related to DBT</a> <sup>New</sup></li>
+              <li><a href="#">Rabi Productivity Strategy (2022-23)</a></li>
+              <li><a href="#">Permissible facilities to farmers</a></li>
+              <li><a href="#">Compilation of Government Orders related to DBT</a></li>
+              <li><a href="#">Rabi Productivity Strategy (2022-23)</a></li>
+              <li><a href="#">Permissible facilities to farmers</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="advisory">
+            <div class="advisory_heading">
+              <h2>Advisory</h2>
+              <a href="#">view all</a>
+            </div>
+            <ul>
+              <li><a href="#">Compilation of Government Orders related to DBT</a></li>
+              <li><a href="#">Rabi Productivity Strategy (2022-23)</a></li>
+              <li><a href="#">Permissible facilities to farmers</a></li>
+              <li><a href="#">Compilation of Government Orders related to DBT</a></li>
+              <li><a href="#">Rabi Productivity Strategy (2022-23)</a></li>
+              <li><a href="#">Permissible facilities to farmers</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- announcement end here -->
+  <!-- gallery start here -->
+  <section>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="gallry">
+            <div class="gallery_sec">
+              <h2>Gallery</h2>
+              <a href="#">view all</a>
+            </div>
+            <div class="main">
+              <div class="gallery_container">
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img1.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img1.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img2.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img2.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img3.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img3.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img4.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img4.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img5.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img5.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-image">
+                    <a href="assets/img/gallery/img6.jpeg" data-fancybox="gallery">
+                      <img src="assets/img/gallery/img6.jpeg" alt="Image Gallery">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="gallery_sec">
+            <h2>Video</h2>
+            <a href="#">view all</a>
+          </div>
+          <div class="video"><img src="assets/img/gallery/video_bg.jpg"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- gallery end here -->
   <!-- ======= Services Section ======= -->
-  <section id="services" class="services" style="padding-top: 20px">
+  <!-- <section id="services" class="services" style="padding-top: 20px">
     <div class="container">
       <div class="section-title text-center">
         <img src="assets/img/h1-line-img1.png" />
@@ -121,11 +461,11 @@
       </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Services Section -->
 
   <!-- ======= About Section ======= -->
-  <section id="about" class="about">
+  <!-- <section id="about" class="about">
     <div class="container" [attr.data-aos]="'fade-up'">
       <div class="row">
         <div class="col-lg-12" [attr.data-aos]="'fade-left'" [attr.data-aos-delay]="100">
@@ -150,11 +490,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End About Section -->
 
   <!-- ======= Announcement Section ======= -->
-  <section id="team" class="team">
+  <!-- <section id="team" class="team">
     <div class="container" [attr.data-aos]="'fade-up'">
       <div class="row">
         <div class="col-lg-7">
@@ -221,11 +561,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Judges Section -->
 
   <!-- ======= Services Section ======= -->
-  <section id="gallery" class="services" style="padding-top: 20px">
+  <!-- <section id="gallery" class="services" style="padding-top: 20px">
     <div class="container">
       <div class="section-title text-center">
         <img src="assets/img/h1-line-img1.png" />
@@ -258,17 +598,18 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Services Section -->
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
-        <div class="container" [attr.data-aos]="'zoom-in'"><div class="clients-slider swiper">
+        <div class="container" [attr.data-aos]="'zoom-in'">
+          <div class="clients-slider swiper">
             <swiper #swiperVirtualRef [slidesPerView]="5" [spaceBetween]="20"
                  [virtual]="true"
                 slideActiveClass="swiper-active whyWouldIuseCustomClass"  [navigation]="true">
                 <ng-template swiperSlide *ngFor="let slide of slidesImg; index as i">
                     <!-- Slide {{ slide }} -->
-                    <img src="assets/img/clients/{{ slide }}" alt="Slide" class="slide-img">
+                    <img src="assets/img/client/{{ slide }}" alt="Slide" class="slide-img">
                 </ng-template>
 
             </swiper>
