--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,92 @@
+<!-- footer start  here -->
+<footer class="footer">
+  <div class="footer_top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="useful_link">
+          <h2>Useful link</h2>
+          <ul>
+            <li><a href="#">Natural Farming Programme, UP</a></li>
+            <li><a href="#">FPO Power</a></li>
+            <li><a href="#">Problem Solving System</a></li>
+            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
+            <li><a href="#">Natural Farming Programme, UP</a></li>
+            <li><a href="#">FPO Power</a></li>
+            <li><a href="#">Problem Solving System</a></li>
+            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
+            <li><a href="#">Natural Farming Programme, UP</a></li>
+            <li><a href="#">FPO Power</a></li>
+            <li><a href="#">Problem Solving System</a></li>
+            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
+            <li><a href="#">Natural Farming Programme, UP</a></li>
+            <li><a href="#">FPO Power</a></li>
+            <li><a href="#">Problem Solving System</a></li>
+            <li><a href="#">Uttar Pradesh Seed Certification Institute</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer_mid">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-10">
+          <div class="footer_visitor">
+            <p>You are Visitor No: <span>4626936</span></p>
+            <p>Last reviewed and updated on :18-07-2023</p>
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <div class="footer_social">
+            <h6>JOIN US</h6>
+            <ul>
+              <li><a href="#"><i class="facebook fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="twitter fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="linkedin fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="youtube fas fa-play"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer_menu">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="footer_menulist">
+          <ul>
+            <li><a href="">Accessibility Statemen</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Hyper Linking Policy</a></li>
+            <li><a href="">Copyright Policy</a></li>
+            <li><a href="">Terms and Conditions</a></li>
+            <li><a href="">Disclaimer</a></li>
+            <li><a href="">Archives</a></li>
+            <li><a href="">Help</a></li>
+            <li><a href="">Website Policy</a></li>
+            <li><a href="">Sitemap</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer_bottom">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <div class="footer_copyright">
+            <p>Content on this website is published and managed by State Agriculture Directorate Uttar Pradesh Krishi
+              Bhawan Lucknow.
+              For any questions about this website, please contact "Web Information Manager".</p>
+            <p>© State Agriculture Directorate Uttar Pradesh, India | All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 <!-- ======= Footer ======= -->
-<footer id="footer">
+<!-- <footer id="footer">
     <div class="footer-top">
       <div class="container-fluid">
         <div class="row">
@@ -65,7 +152,7 @@
             <p>Last reviewed and updated on :
               18-07-2023</p>
             <img src="assets/img/icons/numbercount.png" alt="number counter">
-          </div> -->
+          </div> --
 
           <div class="col-lg-2 col-md-6 footer-newsletter">
             <h4 class="d-none d-sm-block">&nbsp;</h4>
@@ -95,7 +182,7 @@
           © {{'STATE_AGRI_DIRECTORATE_UP' | translate}} | {{'ALL_RIGHTS_RESERVED' | translate}}.
         </span>
         <!-- <span class="me-5">Last reviewed and updated on 12 Jul, 2023 </span>
-        <span>Email Us: delhihighcourt@nic.in | Disclaimer | Sitemap</span> -->
+        <span>Email Us: delhihighcourt@nic.in | Disclaimer | Sitemap</span> --
       </div>
     </div>
   </footer>
